--- a/CSS/flowers.css
+++ b/CSS/flowers.css
@@ -1,177 +1,84 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat+Alternates");
-html {
-  height: 200vh;
-  background: radial-gradient(ellipse at center, #dbb800 0%, #688acc 50%);
-  cursor: pointer;
-}
 
 body {
-  height: 100vh;
-  overflow: hidden;
-  border-bottom: 10vh #339545 solid;
-  box-sizing: border-box;
-  position: relative;
+    font-family: Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #e3f2fd;
+    color: #0d47a1;
+}
+
+.container {
+    text-align: center;
+    padding: 30px;
+    border-radius: 15px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    max-width: 450px;
 }
 
 h1 {
-  text-align: center;
-  color: white;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-size: 40px;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  top: 0vh;
-  transform: translate(0, 100vh);
-  animation: move 1s 2.5s forwards;
+    font-size: 2.2em;
+    color: #1565c0;
+    margin-bottom: 10px;
+    font-weight: 700;
 }
 
-@keyframes move {
-  0% {
-    transform: translate(0, 100vh);
-  }
-  100% {
-    transform: translate(0vh, 0);
-  }
+p {
+    font-size: 1.1em;
+    margin-bottom: 20px;
+    line-height: 1.6;
 }
-.sunflwr {
-  width: 80vmin;
-  height: 80vmin;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 0%);
+
+button {
+    padding: 12px 24px;
+    font-size: 1.1em;
+    color: white;
+    background-color: #42a5f5;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
-.sunflwr__leaf--left, .sunflwr__leaf--right {
-  width: 0%;
-  height: 20%;
-  border-radius: 0% 50% 0% 50%;
-  position: absolute;
-  background: #6f8e4b;
-  top: 70%;
-  left: 45%;
-  transform: translate(-100%, -50%) rotate(-20deg);
-  animation: sunflwr__leaf forwards 1s 0.5s;
+
+button:hover {
+    background-color: #1e88e5;
 }
-.sunflwr__leaf--right {
-  top: 80%;
-  left: 55%;
-  transform: translate(0%, -50%) rotate(-70deg);
+
+/* Hidden message styles */
+#surpriseMessage {
+    margin-top: 25px;
 }
-@keyframes sunflwr__leaf {
-  0% {
-    width: 0%;
-    border: 0px solid black;
-  }
-  100% {
-    width: 20%;
-    border: 2px solid black;
-  }
+
+.hidden {
+    display: none;
 }
-.sunflwr__stem {
-  position: absolute;
-  transform: translate(-50%, 0%);
-  width: 5%;
-  height: 60%;
-  background: #556d39;
-  left: 50%;
-  bottom: 0%;
-  border: 2px solid black;
-  animation: sunflwr__stem forwards 1s;
+
+/* Heartbeat animation */
+.heartbeat {
+    color: #d32f2f;
+    font-weight: bold;
+    animation: heartbeat 1.5s ease-in-out infinite;
 }
-@keyframes sunflwr__stem {
-  0% {
-    height: 0;
-  }
-  100% {
-    height: 60%;
-  }
+
+@keyframes heartbeat {
+    0%, 100% { transform: scale(1); }
+    20%, 60% { transform: scale(1.1); }
+    40%, 80% { transform: scale(1.2); }
 }
-.sunflwr__center {
-  border-radius: 50%;
-  background-color: #3c1f03;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  left: 50%;
-  top: 40%;
-  z-index: 2;
-  animation: sunflwr__center 1s 1s forwards;
+
+img {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 15px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
 }
-@keyframes sunflwr__center {
-  0% {
-    width: 0%;
-    height: 0%;
-  }
-  100% {
-    width: 25%;
-    height: 25%;
-  }
+
+.footer-text {
+    margin-top: 20px;
+    font-style: italic;
+    color: #1e88e5;
 }
-.sunflwr__pedal--1, .sunflwr__pedal--7, .sunflwr__pedal--12, .sunflwr__pedal--11, .sunflwr__pedal--10, .sunflwr__pedal--9, .sunflwr__pedal--8, .sunflwr__pedal--6, .sunflwr__pedal--5, .sunflwr__pedal--4, .sunflwr__pedal--3, .sunflwr__pedal--2 {
-  border-radius: 50%;
-  background: #f2fe00;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  left: 50%;
-  top: 40%;
-  animation: grow-pedal-back 1s 1.5s forwards;
-}
-.sunflwr__pedal--2 {
-  transform: translate(-50%, -50%) rotate(30deg);
-}
-.sunflwr__pedal--3 {
-  transform: translate(-50%, -50%) rotate(60deg);
-}
-.sunflwr__pedal--4 {
-  transform: translate(-50%, -50%) rotate(90deg);
-}
-.sunflwr__pedal--5 {
-  transform: translate(-50%, -50%) rotate(120deg);
-}
-.sunflwr__pedal--6 {
-  transform: translate(-50%, -50%) rotate(150deg);
-}
-@keyframes grow-pedal-back {
-  0% {
-    width: 0%;
-    height: 0%;
-    border: 0px solid black;
-  }
-  100% {
-    width: 15%;
-    height: 45%;
-    border: 2px solid black;
-  }
-}
-.sunflwr__pedal--7, .sunflwr__pedal--12, .sunflwr__pedal--11, .sunflwr__pedal--10, .sunflwr__pedal--9, .sunflwr__pedal--8 {
-  border-radius: 20% 50% 20% 50%;
-  transform: translate(-50%, -50%) rotate(15deg);
-  animation: grow-pedal-front 1s 2s forwards;
-}
-.sunflwr__pedal--8 {
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-.sunflwr__pedal--9 {
-  transform: translate(-50%, -50%) rotate(75deg);
-}
-.sunflwr__pedal--10 {
-  transform: translate(-50%, -50%) rotate(105deg);
-}
-.sunflwr__pedal--11 {
-  transform: translate(-50%, -50%) rotate(135deg);
-}
-.sunflwr__pedal--12 {
-  transform: translate(-50%, -50%) rotate(165deg);
-}
-@keyframes grow-pedal-front {
-  0% {
-    height: 0%;
-    width: 0%;
-    border: 0px solid black;
-  }
-  100% {
-    height: 35%;
-    width: 10%;
-    border: 2px solid black;
-  }
-}/*
